FF-576 #comment Add skjemaPdf and vedlegg properties to metadata